# FastAPI_REST_JWT

./: .gitignore  README.md  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 4c3fa01b4d87_add_field_confirmed_to_user.py  4d8ccc1ec29c_init.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db_connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
